--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      # 1. Download and Install Swift 5.5.1
       - name: Download Swift 5.5.1
         run: wget -q https://download.swift.org/swift-5.5.1-release/ubuntu2004/swift-5.5.1-RELEASE/swift-5.5.1-RELEASE-ubuntu20.04.tar.gz
       - name: Extract Swift 5.5.1
@@ -17,37 +17,56 @@ jobs:
       - name: Add Swift toolchain to PATH
         run: |
           echo "$GITHUB_WORKSPACE/swift-5.5.1-RELEASE-ubuntu20.04/usr/bin" >> $GITHUB_PATH
-
-      - name: Clone swift-docc
+      # 2. Checkout and build Swift-DocC (TODO: Remove once docc becomes part of the toolchain)
+      - name: Checkout swift-docc
         uses: actions/checkout@v2
         with:
           repository: karwa/swift-docc
           ref: main
           path: swift-docc
-      - name: Clone swift-docc-render
-        uses: actions/checkout@v2
+      - name: Cache DocC
+        uses: actions/cache@v2
         with:
-          repository: karwa/swift-docc-render
-          ref: main
-          path: swift-docc-render
+          key: swift-url-docc-build
+          path: swift-docc/.build
       - name: Build swift-docc
         run: |
           cd swift-docc; swift build --product docc -c release; cd ..
-      - name: Build swift-docc-render
-        run: |
-          cd swift-docc-render; npm install && npm run build; cd ..
-      
-      - name: Generate SymbolGraph
-        run: |
-          mkdir -p .build/symbol-graphs && swift build --target WebURL -Xswiftc -emit-symbol-graph -Xswiftc -emit-symbol-graph-dir -Xswiftc .build/symbol-graphs
-      - name: Run Docc
-        run: |
-          export DOCC_HTML_DIR="$(pwd)/swift-docc-render/dist" && swift-docc/.build/release/docc convert Sources/WebURL/WebURL.docc --fallback-display-name WebURL --fallback-bundle-identifier com.karwa.WebURL --fallback-bundle-version 0.2.0 --additional-symbol-graph-dir .build/symbol-graphs --transform-for-static-hosting --static-hosting-base-path /swift-url-docs-test --output-path WebURL.doccarchive 
-      - name: Fix permissions
-        run: 'sudo chown --recursive $USER WebURL.doccarchive'
-      - name: Publish documentation to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@4.1.1
-        with:
-          branch: gh-pages
-          folder: WebURL.doccarchive
-          single-commit: true
+      # 3. Checkout and build custom Swift-DocC-Render
+      #- name: Checkout swift-docc-render
+      #  uses: actions/checkout@v2
+      #  with:
+      #    repository: karwa/swift-docc-render
+      #    ref: main
+      #    path: swift-docc-render
+      #- name: Build swift-docc-render
+      #  run: |
+      #    cd swift-docc-render; npm install && npm run build; cd ..
+      # 4. Checkout WebURL code (we need a full clone in order to get tags).
+      #    This must be the root folder for 'github-pages-deploy-action' to work.
+      #- name: Checkout WebURL Code
+      #  uses: actions/checkout@v2
+      #  with:
+      #    fetch-depth: 0
+      ## 5. Checkout WebURL docs (we need to add to it, not replace it)
+      #- name: Checkout WebURL Docs
+      #  uses: actions/checkout@v2
+      #  with:
+      #    ref: gh-pages
+      #    path: gh-pages
+      # 6. Generate docs for main branch.
+      #- name: Generate SymbolGraph (main)
+      #  run: |
+      #    mkdir -p .build/symbol-graphs && swift build --target WebURL -Xswiftc -emit-symbol-graph -Xswiftc -emit-symbol-graph-dir -Xswiftc .build/symbol-graphs
+      #- name: Run Docc (main)
+      #  run: |
+      #    export DOCC_HTML_DIR="$(pwd)/swift-docc-render/dist" && swift-docc/.build/release/docc convert Sources/WebURL/WebURL.docc --fallback-display-name WebURL --fallback-bundle-identifier com.karwa.WebURL --fallback-bundle-version 0.0.0 --additional-symbol-graph-dir .build/symbol-graphs --transform-for-static-hosting --static-hosting-base-path /swift-url-docs-test/main --output-path gh-pages/main
+      ## 7. Publish the result.
+      #- name: Fix permissions
+      #  run: 'sudo chown --recursive $USER gh-pages'
+      #- name: Publish documentation to GitHub Pages
+      #  uses: JamesIves/github-pages-deploy-action@4.1.1
+      #  with:
+      #    branch: gh-pages
+      #    folder: gh-pages
+      #    single-commit: true
