--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -9,6 +9,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # 4. Checkout WebURL code (we need a full clone in order to get tags).
+      #    This must be the root folder for 'github-pages-deploy-action' to work.
+      - name: Checkout WebURL Code
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       # 1. Download and Install Swift 5.5.1
       - name: Download Swift 5.5.1
         run: wget -q https://download.swift.org/swift-5.5.1-release/ubuntu2004/swift-5.5.1-RELEASE/swift-5.5.1-RELEASE-ubuntu20.04.tar.gz
@@ -25,48 +31,55 @@ jobs:
           ref: main
           path: swift-docc
       - name: Cache DocC
+        id: cache-docc
         uses: actions/cache@v2
         with:
           key: swift-url-docc-build
           path: swift-docc/.build
       - name: Build swift-docc
+        if: ${{ !steps.cache-docc.outputs.cache-hit }}
         run: |
           cd swift-docc; swift build --product docc -c release; cd ..
       # 3. Checkout and build custom Swift-DocC-Render
-      #- name: Checkout swift-docc-render
-      #  uses: actions/checkout@v2
-      #  with:
-      #    repository: karwa/swift-docc-render
-      #    ref: main
-      #    path: swift-docc-render
-      #- name: Build swift-docc-render
-      #  run: |
-      #    cd swift-docc-render; npm install && npm run build; cd ..
-      # 4. Checkout WebURL code (we need a full clone in order to get tags).
-      #    This must be the root folder for 'github-pages-deploy-action' to work.
-      #- name: Checkout WebURL Code
-      #  uses: actions/checkout@v2
-      #  with:
-      #    fetch-depth: 0
-      ## 5. Checkout WebURL docs (we need to add to it, not replace it)
-      #- name: Checkout WebURL Docs
-      #  uses: actions/checkout@v2
-      #  with:
-      #    ref: gh-pages
-      #    path: gh-pages
+      - name: Checkout swift-docc-render
+        uses: actions/checkout@v2
+        with:
+          repository: karwa/swift-docc-render
+          ref: main
+          path: swift-docc-render
+      - name: Build swift-docc-render
+        run: |
+          cd swift-docc-render; npm install && npm run build; cd ..
+      # 5. Checkout WebURL docs (we need to add to it, not replace it)
+      - name: Checkout WebURL Docs
+        uses: actions/checkout@v2
+        with:
+          ref: gh-pages
+          path: docs-out
       # 6. Generate docs for main branch.
-      #- name: Generate SymbolGraph (main)
-      #  run: |
-      #    mkdir -p .build/symbol-graphs && swift build --target WebURL -Xswiftc -emit-symbol-graph -Xswiftc -emit-symbol-graph-dir -Xswiftc .build/symbol-graphs
-      #- name: Run Docc (main)
-      #  run: |
-      #    export DOCC_HTML_DIR="$(pwd)/swift-docc-render/dist" && swift-docc/.build/release/docc convert Sources/WebURL/WebURL.docc --fallback-display-name WebURL --fallback-bundle-identifier com.karwa.WebURL --fallback-bundle-version 0.0.0 --additional-symbol-graph-dir .build/symbol-graphs --transform-for-static-hosting --static-hosting-base-path /swift-url-docs-test/main --output-path gh-pages/main
-      ## 7. Publish the result.
-      #- name: Fix permissions
-      #  run: 'sudo chown --recursive $USER gh-pages'
-      #- name: Publish documentation to GitHub Pages
-      #  uses: JamesIves/github-pages-deploy-action@4.1.1
-      #  with:
-      #    branch: gh-pages
-      #    folder: gh-pages
-      #    single-commit: true
+      - name: Clear existing docs
+        run: rm -rf docs-out/.git && rm -rf docs-out/main && mkdir -p docs-out/main
+      - name: Generate SymbolGraph (main)
+        run: |
+          mkdir -p .build/symbol-graphs && swift build --target WebURL -Xswiftc -emit-symbol-graph -Xswiftc -emit-symbol-graph-dir -Xswiftc .build/symbol-graphs
+      - name: Run Docc (main)
+        run: |
+          export DOCC_HTML_DIR="$(pwd)/swift-docc-render/dist" && swift-docc/.build/release/docc convert Sources/WebURL/WebURL.docc --fallback-display-name WebURL --fallback-bundle-identifier com.karwa.WebURL --fallback-bundle-version 0.0.0 --additional-symbol-graph-dir .build/symbol-graphs --transform-for-static-hosting --static-hosting-base-path /swift-url-docs-test/main --output-path docs-out/main
+      # 7. Publish the result.
+      - name: Check one
+        run: ls -al docs-out
+      - name: Check two
+        run: ls -al docs-out/main/
+      - name: Fix permissions
+        run: 'sudo chown --recursive $USER docs-out'
+      - name: Publish documentation to GitHub Pages
+        uses: JamesIves/github-pages-deploy-action@4.1.7
+        with:
+          branch: gh-pages
+          folder: docs-out
+          single-commit: true
+          clean: false
+      - name: Check three
+        run: ls -al docs-out
+      - name: Check four
+        run: ls -al docs-out/main/
